--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,20 @@
-.bundle
+/target
+/lib
+/classes
+/checkouts
+pom.xml
+*.jar
+*.class
+.lein-deps-sum
+.lein-failures
+.lein-plugins
+tmp/
+examples/
+doc/
 .DS_Store
-.rvmrc
-_site
-bin
-source/tmp/*
-_site/*
-.sass-cache/*
-*.sassc
-*\#*
-~*
-_source/*
-_cache
+.idea/
+build/
+todo*
+*~
+\#*
+deploy.docs.sh
